# posit

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
ci/: check_version.sh
examples/: demo.rs  p8e1.rs
py-posit/: .gitignore  Cargo.toml  Makefile  README.md  jposit.h  pyproject.toml  setup.py
py-posit/jposit/: __demo.py  __init__.py  demo.py
py-posit/notebooks/: demo.ipynb
py-posit/src/: lib.rs
src/: lib.rs
