[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
name = "posit"
version = "0.1.0"
edition = "2024"

[dependencies]
typenum = "1.7.0"

[dependencies.cast]
default-features = false
version = "0.2.0"

[dev-dependencies]
approx = "0.1.1"
quickcheck = "0.4.1"

[features]
const-fn = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(unimplemented)',
  'cfg(unused)',
] }
