[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "jposit"
version = "0.1.0"
description = "jposit"
authors = [{ name = "Franceco Urbani", email = "francescourbanidue@gmail.com" }]
readme = "README.md"
# license = { file = "LICENSE-MIT" }
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8,<3.14"
dependencies = []

[tool.maturin]
# bindings = "pyo3"      # Assuming you use PyO3
module-name = "jposit"
