[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "jposit"
version = "0.3.0-dev"
description = "jposit"
authors = [{ name = "Franceco Urbani", email = "francescourbanidue@gmail.com" }]
readme = "README.md"
# license = { file = "LICENSE-MIT" }
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8,<3.14"
dependencies = []

[tool.maturin]
module-name = "jposit"
